--- a/webroot/css/back/builder.css
+++ b/webroot/css/back/builder.css
@@ -505,6 +505,7 @@ div.content_sidebar div.task_sidebar.notask {
   overflow: hidden;
 }
 div.content_sidebar div.task_sidebar.notask > div {
+  width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
