--- a/webroot/scss/styles.scss
+++ b/webroot/scss/styles.scss
@@ -621,6 +621,76 @@ div.container {
     }
 }
 
+div.popup_mc > div.popup_container {
+    & > header,
+    & > form { width: 100%; }
+
+    & > header { 
+        background: $primaryColor;
+        height: 130px; 
+
+        h1 {
+            color: #fff;
+            margin: 0; padding: 0;
+            text-align: center;
+            line-height: 130px;
+            font-size: 28px;
+            text-transform: uppercase;
+        }
+    }
+
+    & > form { background-color: #fff;
+
+        div.field {
+            @include flex(row nowrap, flex-start, center);
+            width: 100%;
+            padding: 24px 20px;
+            border-bottom: $primaryBorder;
+            @include box-sizing(border-box);
+
+            .aside {
+                width: 50%;
+                height: 100%;
+                @include flex(row wrap, center, center);
+                text-align: left;
+
+                label, p { width: 100%; }
+
+                &.overside p { text-align: center; }
+
+                &.oneside p, &.oneside label { margin:0; }
+            }
+        }
+
+        p, label, input, textarea {
+            color: $primaryTextColor;
+            font-size: 16px;
+            margin: 0; border: 0;
+            @include box-sizing(border-box);
+            position: relative;
+            &:-webkit-autofill { -webkit-box-shadow: 0 0 0 1000px #fff inset; }
+        }
+
+        input, textarea {
+            outline: 0;
+            width: 100%;
+            border-bottom: 1px solid #999999;
+            padding: 12px 0px;
+            font-size: 16px;
+            resize: none;
+            background-color: transparent;
+
+            &:focus, &:valid { color: #444; }
+        }
+
+        textarea {
+            &::-webkit-scrollbar { width: 9px; }
+            &::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); @include border-radius(50px); }
+            &::-webkit-scrollbar-thumb { border-radius: 50px; background: adjust-lightness(#444, 40); }
+        }
+    }
+}
+
 /*----------  Alerte  ----------*/
 
 div.alert {
@@ -690,82 +760,6 @@ div.alert {
     }
 
     &:hover { background: #f5f5f5; @include opacity(1); }
-}
-
-/*----------  Popup  ----------*/
-
-div.popup_mc#templateOrder > div.popup_container { width: 80%; }
-
-div.popup_mc > div.popup_container {
-    & > header,
-    & > form { width: 100%; }
-
-    & > header { 
-        background: $primaryColor;
-        height: 130px; 
-
-        h1 {
-            color: #fff;
-            margin: 0; padding: 0;
-            text-align: center;
-            line-height: 130px;
-            font-size: 28px;
-            text-transform: uppercase;
-        }
-    }
-
-    & > form { background-color: #fff;
-
-        div.field {
-            @include flex(row nowrap, flex-start, center);
-            width: 100%;
-            padding: 24px 20px;
-            border-bottom: $primaryBorder;
-            @include box-sizing(border-box);
-
-            .aside {
-                width: 50%;
-                height: 100%;
-                @include flex(row wrap, center, center);
-                text-align: left;
-
-                label, p { width: 100%; }
-
-                &.overside p { text-align: center; }
-
-                &.oneside p, &.oneside label { margin:0; }
-            }
-        }
-
-        p, label, input, textarea {
-            color: $primaryTextColor;
-            font-size: 16px;
-            margin: 0; border: 0;
-            @include box-sizing(border-box);
-            position: relative;
-            &:-webkit-autofill { -webkit-box-shadow: 0 0 0 1000px #fff inset; }
-        }
-
-        input, textarea {
-            outline: 0;
-            width: 100%;
-            border-bottom: 1px solid #999999;
-            padding: 12px 0px;
-            font-size: 16px;
-            resize: none;
-            background-color: transparent;
-
-            &:focus, &:valid { color: #444; }
-        }
-
-        textarea {
-            &::-webkit-scrollbar { width: 9px; }
-            &::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); @include border-radius(50px); }
-            &::-webkit-scrollbar-thumb { border-radius: 50px; background: adjust-lightness(#444, 40); }
-        }
-
-        & > footer { @extend .verhor-center; }
-    }
 }
 
 /*----------  Dashboard  ----------*/
@@ -1278,7 +1272,7 @@ div.container_profil { overflow-y: scroll!important;
             top: 0; bottom: 0; left: 0; right: 0;
             @include visible(false);
             @include animateVisibility(0.3s);
-            background-color: rgba(255, 59, 73, 0.7);
+            background-color: rgba(6, 118, 178, 0.7);
             height: 100%;
             width: 100%;
             &.active { @include visible(true); }
@@ -1466,6 +1460,38 @@ div.container_archives {
             span {
                 background-color: $primaryColor;
             } 
+        }
+    }
+}
+
+/*----------  Orders  ----------*/
+
+div.container_orders {
+    
+    .statut {
+        display: inline;
+        padding: .2em .6em .3em;
+        font-size: 75%;
+        font-weight: 600;
+        line-height: 1;
+        color: #fff;
+        text-align: center;
+        white-space: nowrap;
+        vertical-align: baseline;
+        border-radius: .25em;
+        text-transform: uppercase;
+    
+        &.statut0 { background-color: #777; }
+        &.statut1 { background-color: #f0ad4e; }
+        &.statut2 { background-color: #009688; }
+        &.statut3 { background-color: #5cb85c; }
+    }
+
+    div#orderPopup {
+        div.popup_container footer {
+            min-height: 80px;
+
+            p { padding: 10px; }
         }
     }
 }
