--- a/webroot/scss/styles.scss
+++ b/webroot/scss/styles.scss
@@ -889,10 +889,24 @@ div.container_template { overflow-y: scroll!important;
 
         & > ul { width: 100%;
 
-            & > li { height: 170px; padding: 15px 0; &:not(:last-child) { border-bottom: $primaryBorder; } }
+            & > li { 
+                height: 170px; 
+                padding: 15px 0; 
+                &:not(:last-child) { border-bottom: $primaryBorder; }
+
+            }
             li > div { height: 100%; }
 
-            li div.col_template_thumbs { margin-right: 15px; img { display: block; } }
+            li div.col_template_thumbs { 
+                margin-right: 15px; 
+                width: 120px;
+                background-attachment: scroll!important;
+                background-size: 100% auto!important;
+                background-position: top!important;
+                background-repeat: no-repeat!important;
+                border: $primaryBorder;
+                cursor: zoom-in;
+            }
             li div.col_template_descr  {
                 & > p {
                     span {
