--- a/webroot/css/back/builder.css
+++ b/webroot/css/back/builder.css
@@ -261,6 +261,10 @@ div.content_email > div#storage_email table, div.content_email > div#storage_ema
   outline: none;
   word-break: break-all;
 }
+div.content_email > div#storage_email p {
+  font-size: inherit;
+  font-family: inherit;
+}
 
 div.medium-editor-toolbar {
   animation-duration: 500ms !important;
