--- a/webroot/scss/styles.scss
+++ b/webroot/scss/styles.scss
@@ -1235,9 +1235,21 @@ div.container_profil { overflow-y: scroll!important;
 
 .container_emails { overflow-x: hidden!important; overflow-y: scroll!important;
 
-    h2 { font-size: 21px; }
+    h2 { font-size: 21px; font-weight: 600; color: $primaryTextColor; }
     
     .pannel_title {
+
+        a {
+            color: $primaryTextColor;
+            font-weight: 600;
+            padding: 7px 10px;
+            border: 2px solid $primaryTextColor;
+            text-decoration: none;
+            @include border-radius(3px);
+            background-color: #fafafa;
+            &:hover { text-decoration: underline; }
+        }
+
         span {
             word-break: keep-all!important;
             height: 22px;
