--- a/webroot/css/back/builder.css
+++ b/webroot/css/back/builder.css
@@ -721,12 +721,12 @@ div.field_item_sidebar#img button {
   background-color: #444;
   color: #fff;
 }
-div.field_item_sidebar#height span.ui-spinner, div.field_item_sidebar#font-size span.ui-spinner, div.field_item_sidebar#line-height span.ui-spinner {
+div.field_item_sidebar#height span.ui-spinner, div.field_item_sidebar#font-size span.ui-spinner, div.field_item_sidebar#line-height span.ui-spinner, div.field_item_sidebar#border-radius span.ui-spinner {
   width: 100%;
   height: 100% !important;
   display: block;
 }
-div.field_item_sidebar#height input.ui-spinner-input, div.field_item_sidebar#font-size input.ui-spinner-input, div.field_item_sidebar#line-height input.ui-spinner-input {
+div.field_item_sidebar#height input.ui-spinner-input, div.field_item_sidebar#font-size input.ui-spinner-input, div.field_item_sidebar#line-height input.ui-spinner-input, div.field_item_sidebar#border-radius input.ui-spinner-input {
   margin: 0;
   padding: 5px;
   -moz-box-sizing: border-box;
@@ -735,7 +735,7 @@ div.field_item_sidebar#height input.ui-spinner-input, div.field_item_sidebar#fon
   height: 100%;
   vertical-align: baseline;
 }
-div.field_item_sidebar#height a.ui-button, div.field_item_sidebar#font-size a.ui-button, div.field_item_sidebar#line-height a.ui-button {
+div.field_item_sidebar#height a.ui-button, div.field_item_sidebar#font-size a.ui-button, div.field_item_sidebar#line-height a.ui-button, div.field_item_sidebar#border-radius a.ui-button {
   position: absolute;
   width: 30px;
   height: 100%;
@@ -744,7 +744,7 @@ div.field_item_sidebar#height a.ui-button, div.field_item_sidebar#font-size a.ui
   bottom: 0;
   border-left: 1px solid rgba(0, 0, 0, 0.2);
 }
-div.field_item_sidebar#height a.ui-button:last-child, div.field_item_sidebar#font-size a.ui-button:last-child, div.field_item_sidebar#line-height a.ui-button:last-child {
+div.field_item_sidebar#height a.ui-button:last-child, div.field_item_sidebar#font-size a.ui-button:last-child, div.field_item_sidebar#line-height a.ui-button:last-child, div.field_item_sidebar#border-radius a.ui-button:last-child {
   right: 30px;
 }
 div.field_item_sidebar#text-align span.format_align {
