--- a/webroot/scss/builder.scss
+++ b/webroot/scss/builder.scss
@@ -555,7 +555,7 @@ div.field_item_sidebar {
         }
     }
 
-    &#height, &#font-size, &#line-height {
+    &#height, &#font-size, &#line-height, &#border-radius {
 
         span.ui-spinner { width: 100%; height: 100%!important; display: block; }
 
