--- a/webroot/css/back/styles.css
+++ b/webroot/css/back/styles.css
@@ -232,6 +232,14 @@
 .button_default.button_href, .button_href.select_default {
   line-height: 40px;
 }
+.button_default.disabled, .disabled.select_default {
+  background-color: #BDBDBD;
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
+  opacity: 0.9;
+}
 
 .select-wrapper {
   position: relative;
