--- a/webroot/scss/styles.scss
+++ b/webroot/scss/styles.scss
@@ -6,6 +6,10 @@
 
 @import 'compass/css3';
 
+
+.Modal-animationWrapper {
+    position: static!important;
+}
 /*----------  Fonts  ----------*/
 
 /* fallback */
@@ -239,6 +243,12 @@ $shadow3: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
     i { @include inline-block(middle); font-size: 20px!important; position: relative; top: -1px; }
     &.button_href { line-height: 40px; }
     &.disabled { background-color: #BDBDBD; @include box-shadow($shadow0); @include opacity(0.9); }
+}
+
+.turbolinks-progress-bar {
+    height: 5px;
+    background-color: $primaryColor;
+    z-index: 9999999;
 }
 
 .select-wrapper {
@@ -1291,7 +1301,22 @@ div.container_profil { overflow-y: scroll!important;
         }
     }
 
-    .emails_list { padding: 15px 0; overflow-x: hidden; height: 150px; }
+    .emails_list { 
+        padding: 15px 0; 
+        overflow-x: hidden; 
+        height: 150px; 
+
+        & > div {
+            position: absolute;
+            @include box-sizing(border-box);
+            width: 100%; height: 150px;
+            border: 1px dashed black;
+            left: 50%;
+            @include translateX(-50%);
+            @include flex(row nowrap, center, center);
+            p { text-align: center; font-size: 15px; }
+        }
+    }
 
     .email {
         background-attachment: scroll!important;
