--- a/webroot/scss/styles.scss
+++ b/webroot/scss/styles.scss
@@ -6,10 +6,6 @@
 
 @import 'compass/css3';
 
-
-.Modal-animationWrapper {
-    position: static!important;
-}
 /*----------  Fonts  ----------*/
 
 /* fallback */
@@ -194,8 +190,6 @@ $shadow3: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 .col-verti-around { @include justify-content(space-around); }
 
 .verhor-center { @include flex(row nowrap, center, center); }
-
-.full-width { width: 100%; }
 
 .material-icons {
   font-family: 'Material Icons';
@@ -603,7 +597,7 @@ div.container {
 .popup_mc {
     position: fixed;
     width: 100%;
-    z-index: 99999999999;
+    z-index: 999999;
     height: 100vh;
     top: 0; right: 0; bottom: 0; left: 0;
     overflow-y: auto;
@@ -709,7 +703,7 @@ div.alert {
     min-width: 150px;
     height: 50px;
     color: #fff;
-    z-index: 99999999;
+    z-index: 9999999;
     border: 2px solid #fff;
     right: 50px; bottom: -50px;
     @include box-shadow($shadow0);
@@ -717,6 +711,44 @@ div.alert {
 
     p { text-align: center; line-height: 50px; padding: 0 20px;}
 }
+
+/*----------  Loader  ----------*/
+
+$loader-size: 20px;
+$spacing: 30px;
+
+.loader {
+   height: $loader-size; width: $loader-size;
+   display: inline-block;
+   background: transparent;
+   position: relative;
+
+      &:after, &::before {
+         content: '';
+         position: absolute;
+         height: $loader-size;
+         width: $loader-size;
+         background: rgba(0,0,0,0.5);
+         @include animation(updown 1s ease-in-out 0s infinite);
+      }
+
+      &:before { left: $spacing; @include animation-delay(0s); }
+      &:after { right: $spacing; @include animation-delay(0.66s); }
+    
+   span {
+      height: $loader-size; width: $loader-size;
+      background: rgba(0,0,0,.5);
+      position: absolute;
+      left: 0; top: 0;
+      @include animation(updown 1s ease-in-out 0.33s infinite);
+    }
+}
+
+@keyframes updown {
+    0%, 100% { @include translateY(0%); }
+    50% { @include translateY(-80%); }
+}
+
 
 /*----------  Tableur  ----------*/
 
@@ -981,7 +1013,24 @@ div.container_template { overflow-y: scroll!important;
 
 div.container_profil { overflow-y: scroll!important;
 
-    div.popup_mc#profilRenewal button { margin: 10px auto; }
+    div.popup_mc#stoppedSubscription {
+        footer { height: 100px; @include flex(column nowrap, center, center); p { padding: 5px; } }
+        button { margin: 10px auto }
+        i {
+            color: #fff;
+            border: 1px solid white;
+            font-size: 10px;
+            padding: 3px;
+            @include border-radius(50%);
+
+            &.ok { background-color: #4CAF50; }
+            &.nok { background-color: #F44336; }
+        }
+
+        .errorMessage { color: red; }
+
+        .loader { margin-top: 30px; }
+    }
 
     div.settings_menu {
         position: relative;
@@ -1030,6 +1079,7 @@ div.container_profil { overflow-y: scroll!important;
     div.block > .pannel_title + div.pannel_body { padding-top: 0!important; padding-bottom: 0!important; }
 
     h2 { color: $primaryTextColor; text-align: center; }
+
     p.legend { 
         text-align: center; 
         width: 100%;
@@ -1121,6 +1171,7 @@ div.container_profil { overflow-y: scroll!important;
             @include box-sizing(border-box);
             border-top: 1px solid rgbaExpress(black, 0.085);
             p { padding: 0 5px; }
+
             input:not([type="submit"]) {
                 border: 0;
                 margin-right: 5px;
@@ -1227,38 +1278,6 @@ div.container_profil { overflow-y: scroll!important;
     table.table_fac th { width: 24%; &:last-child { width: 4%; } }
     table.table_fac tbody td:last-child { text-align: center; }
     table.table_fac i { cursor: pointer; @include noselect(); color: #BE0804; }
-
-    .checkbonito{ display: none; }
-    .checkbonito ~ label{
-        display: inline-block;
-        max-width: 30px;
-        background-color: #f0f0f0;
-        padding: 10px 25px;
-        @include border-radius(50px);
-        cursor: pointer;
-        @include single-transition(all, 200ms, ease-in-out, 0s);
-        margin: 5px;
-        @include noselect();
-    }
-    .checkbonito:checked ~ label{
-        background-color: adjust-lightness($primaryColor, 12);
-    }
-    .checkbonito ~ label::before{
-        content: "";
-        background-color: white;
-        padding: 13px;
-        position: absolute;
-        cursor: pointer;
-        display: block;
-        @include translate(-30px, -13px);
-        @include border-radius(50px);
-        @include single-transition(all, 200ms, ease-in-out, 0s);
-        @include box-shadow(1px 1px 5px .5px rgbaExpress(black, 0.5));
-    }
-    .checkbonito:checked ~ label::before{
-      @include translate(5px, -13px);
-      background-color: $primaryColor;
-    }
 }
 
 /*----------  Emails  ----------*/
@@ -1310,11 +1329,11 @@ div.container_profil { overflow-y: scroll!important;
             position: absolute;
             @include box-sizing(border-box);
             width: 100%; height: 150px;
-            border: 1px dashed black;
+            border: 1px dashed $colorBorder;
             left: 50%;
             @include translateX(-50%);
             @include flex(row nowrap, center, center);
-            p { text-align: center; font-size: 15px; }
+            p { text-align: center; font-size: 15px; color: $primaryTextColor; }
         }
     }
 
